commit client and server code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "utility": "cpp",
         "cjson.h": "c",
         "stdio.h": "c",
-        "socket.h": "c"
+        "socket.h": "c",
+        "types.h": "c"
     }
 }
